--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nerissa</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="https://files.catbox.moe/0x1f5p.png">
 </head>
 <body>
 
-  <!-- ==================== MÀN 1: LOGIN ==================== -->
-  <div id="login" class="screen active">
-    <div class="login-box">
+  <!-- MÀN 1: LOGIN -->
+  <div id="login" class="page active">
+    <div class="box">
       <img src="https://files.catbox.moe/0x1f5p.png" alt="wave" class="logo">
       <h1>Nerissa</h1>
       <p>Biển giữ hộ tâm tư, gió mang đến lời yêu.</p>
@@ -20,71 +19,67 @@
       <input type="password" placeholder="Mật khẩu" class="input">
 
       <button class="btn-primary">Đăng nhập</button>
+      <button onclick="show('home')" class="btn-ghost">Khám phá không cần đăng nhập</button>
 
-      <button onclick="gotoHome()" class="btn-ghost">Khám phá không cần đăng nhập</button>
-
-      <div class="footer-text">
+      <div class="footer">
         Chưa có tài khoản? <a href="#">Đăng ký ngay</a>
       </div>
     </div>
   </div>
 
-  <!-- ==================== MÀN 2: HOME ==================== -->
-  <div id="home" class="screen">
-    <div class="home-content">
-      <header>
-        <img src="https://files.catbox.moe/0x1f5p.png" class="small-logo">
-        <h2>Nerissa</h2>
-        <button onclick="gotoVoice()" class="icon-btn">Speaker</button>
-      </header>
+  <!-- MÀN 2: HOME -->
+  <div id="home" class="page">
+    <header>
+      <img src="https://files.catbox.moe/0x1f5p.png" class="small-logo">
+      <h2>Nerissa</h2>
+      <button onclick="show('voice')" class="icon-btn">Speaker</button>
+    </header>
 
-      <div class="main-text">
-        Biển giữ hộ tâm tư, gió mang<br>đến lời yêu.
-      </div>
-
-      <button onclick="gotoVoice()" class="btn-large">Bắt đầu hành trình</button>
-    </div>
+    <main>
+      <p class="text">Biển giữ hộ tâm tư, gió mang<br>đến lời yêu.</p>
+      <button onclick="show('voice')" class="btn-large">Bắt đầu hành trình</button>
+    </main>
 
     <nav class="bottom-bar">
       <button class="active">Home</button>
       <button>Biển Lặng</button>
       <button>Đáy Sâu</button>
       <button>Gió Biển</button>
-      <button onclick="gotoVoice()" class="active">Speaker</button>
+      <button onclick="show('voice')" class="active">Speaker</button>
       <button>Bãi Cát</button>
     </nav>
   </div>
 
-  <!-- ==================== MÀN 3: TIẾNG SÓNG (ĐÚNG 100% ẢNH BẠN GỬI) ==================== -->
-  <div id="voice" class="screen">
-    <div class="voice-content">
-      <header>
-        <img src="https://files.catbox.moe/0x1f5p.png" class="small-logo">
-        <h2>Nerissa</h2>
-        <button class="icon-btn">Speaker</button>
-      </header>
+  <!-- MÀN 3: TIẾNG SÓNG – ĐÚNG 100% ẢNH BẠN GỬI -->
+  <div id="voice" class="page">
+    <header>
+      <img src="https://files.catbox.moe/0x1f5p.png" class="small-logo">
+      <h2>Nerissa</h2>
+      <button class="icon-btn">Speaker</button>
+    </header>
 
-      <div class="title-section">
-        <span class="big-speaker">Speaker</span>
+    <main>
+      <div class="title">
+        <span class="big-icon">Speaker</span>
         <h1>Tiếng Sóng</h1>
       </div>
 
-      <p class="lead-text">Muốn nói chuyện ngay?<br>Chọn cách kết nối của bạn</p>
+      <p class="lead">Muốn nói chuyện ngay?<br>Chọn cách kết nối của bạn</p>
 
-      <div class="options">
-        <button onclick="startGroup()" class="option-card">
-          <span class="icon-group">People</span>
+      <div class="cards">
+        <button onclick="goToChat('group')" class="card">
+          <span class="icon">People</span>
           <div>
-            <div class="option-title">Phòng chung</div>
-            <div class="option-desc">Tham gia phòng chat với nhiều người<br>đang cần trò chuyện</div>
+            <div class="card-title">Phòng chung</div>
+            <div class="card-desc">Tham gia phòng chat với nhiều người<br>đang cần trò chuyện</div>
           </div>
         </button>
 
-        <button onclick="startOneToOne()" class="option-card">
-          <span class="icon-person">Person</span>
+        <button onclick="goToChat('one')" class="card">
+          <span class="icon">Person</span>
           <div>
-            <div class="option-title">Kết nối 1:1</div>
-            <div class="option-desc">Tìm một người để trò chuyện riêng tư,<br>ẩn danh 100%</div>
+            <div class="card-title">Kết nối 1:1</div>
+            <div class="card-desc">Tìm một người để trò chuyện riêng tư,<br>ẩn danh 100%</div>
           </div>
         </button>
       </div>
@@ -94,7 +89,7 @@
         Nếu không tìm được người kết nối sau 5s,<br>
         bạn sẽ được chuyển sang chat với Biển
       </div>
-    </div>
+    </main>
 
     <nav class="bottom-bar">
       <button>Nerissa</button>
@@ -106,11 +101,8 @@
     </nav>
   </div>
 
-  <!-- ==================== MÀN CHAT CŨ (bạn dán nguyên vào đây sau) ==================== -->
-  <div id="chat-old" class="screen">
-    <!-- Bạn dán nguyên toàn bộ HTML chat cũ của bạn vào đây -->
-    <!-- Mình sẽ giúp bạn dán ở tin nhắn tiếp theo nếu cần -->
-  </div>
+  <!-- MÀN CHAT CŨ CỦA BẠN (sẽ load ở đây) -->
+  <div id="chat" class="page"></div>
 
   <script src="script.js"></script>
 </body>
